# secrets-sync

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build_and_publish.yml
docs/: SOURCE_1PASSWORD.md  SOURCE_ENV.md  SOURCE_KEEPER.md  SOURCE_YAML.md
examples/basic/: dev.yaml
examples/basic/vars/: default.yaml  dev.yaml
examples/basic/vars/files/: dev-cert.pem  dev-metadata.json
secrets_sync/: cli.py  config.py  models.py
secrets_sync/sinks/: __init__.py  aws_secrets_manager.py  aws_ssm.py  base.py
secrets_sync/sources/: __init__.py  base.py  env_vars.py  keeper.py  onepassword.py  yaml_file.py
secrets_sync/utils/: __init__.py  logging.py  rate_limiter.py  retry.py
